# lern-rust

./: README.md
waveshare/lcd-1.69-touch-investigation/: Cargo.toml  build.rs
waveshare/lcd-1.69-touch-investigation/src/: display.rs  main.rs  touch.rs
waveshare/lcd-1.69-touch-investigation/ui/: main.slint
waveshare/lcd-3.5-touch-investigation/: Cargo.toml  README.md  memory.x
waveshare/lcd-3.5-touch-investigation/src/: main.rs
