[package]
name = "waveshare-touch-investigation"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl", "defmt"] }
rp2040-boot2 = "0.3.0"
embedded-alloc = "0.6.0"
slint = { version = "1.12", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }


[build-dependencies]
slint-build = "1.12"

[profile.release]
opt-level = 3
lto = "fat"
debug = 2
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1

[profile.release.build-override]
opt-level = 0
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 8

